Update app.scss ・vuetifyの追加 ・@mdi-fontの追加

--- a/laravel/resources/sass/app.scss
+++ b/laravel/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// vuetify
+@import '~vuetify/dist/vuetify.min.css';
+
+// @mdi-font
+@import '~@mdi/font/css/materialdesignicons.min.css';
